react/lms/src/resources/css/notification.css
.dashboard-page-header-notification
{
  z-index: 3;
  position: absolute;
  top: 25%;
  margin-left: 82%;
  cursor: pointer;
  width: 1.7%;
  height: 43.2%;

  transition-property: transform;
  transition-timing-function: cubic-bezier(.42, 0, .58, 1);
  transition-duration: .2s;
}

.dashboard-page-header-notification-number
{
  z-index: 3;
  position: absolute;
  font-family: "work sans", sans-serif;
  font-size: max(0.5vw, 7.2px);
  color: #FFFFFF;
  top: 27.5%;
  left: 83.11%;
  width: 0.8%;
}

.dashboard-page-header-notification:hover
{
  transform: scale(1.2);
}

.dashboard-page-header-notification-polygon
{
  z-index: 3;
  position: absolute;
  top: 90%;
  left: 82.15%;
  width: 1.0%;
  height: 30%;
}

.dashboard-page-header-notification-toprect
{
  z-index: 3;
  position: absolute;
  background: #000E1B 0% 0% no-repeat padding-box;
  opacity: 0.9;
  border-radius: 3px;
  top: 120%;
  left: 81.5%;
  width: 17.18%;
  height: 58%;
}

.dashboard-page-header-notification-text
{
  z-index: 5;
  position: absolute;
  color: #FFFFFF;
  font-family: "work sans", sans-serif;
  font-size: max(0.75vw, 10.8px);
  font-weight: 600;
  letter-spacing: 0.05em;
  top: 11%;
  left: 4%;
}

.dashboard-page-header-notification-clearbtn
{
  position: absolute;
  background-color: #F7F7F7;
  color: #6D6E71;
  font-family: "work sans", sans-serif;
  font-size: max(0.7vw, 10.08px);
  font-weight: 550;
  border-radius: 3px;
  top: 26%;
  left: 71%;
  width: 22.72%;
  line-height: 150%;
  text-align: center;
}

.dashboard-page-header-notification-clearbtn:hover
{
  background-color:#E6E6E6;
  cursor: pointer;
}

.dashboard-page-header-notification-clearbtn:active
{
  background-color: #F7F7F7;
}

.dashboard-page-header-notification-dropdown-list
{
  z-index: 1;
  position: absolute;
  opacity: 1;
  top: 177%;
  left: 81.5%;
  width: 17.18%;
  height: 56%;
}

.dashboard-page-header-notification-dropdown-ul
{
  list-style: none;
}

.dashboard-page-header-notification-dropdown-ul li 
{
  background-color: #474546;
  color: #FFFFFF;
  opacity: 0.9;
  font-family: "work sans", sans-serif;
  font-weight: 400;
  border: 1px solid #474546;
  border-radius: 3px;
  margin-top: 1%;
}

.dashboard-page-header-notification-dropdown-li-icon
{
  margin-left: 3%;
  margin-top: 3%;
  width: 10%;
  height: 5%;
}

.dashboard-page-header-notification-dropdown-li-title
{
  color: #FFFFFF;
  font-family: "work sans", sans-serif;
  font-size: max(0.75vw, 10.8px);
  font-weight: 600;
  letter-spacing: 0.05em;
  text-decoration: underline;
  margin-left: 20%;
  margin-right: 20%;
  margin-top: -11.2%;
}

.dashboard-page-header-notification-dropdown-li-description
{
  color: #FFFFFF;
  font-family: "work sans", sans-serif;
  font-size: max(0.75vw, 10.8px);
  font-weight: 400;
  letter-spacing: 0.05em;
  margin-left: 20%;
  margin-top: 2.2%;
}

.dashboard-page-header-notification-dropdown-li-button
{
  background-color: #F7F7F7;
  color: #6D6E71;
  font-family: "work sans", sans-serif;
  font-size: max(0.7vw, 10.08px);
  font-weight: 550;
  border-radius: 3px;
  line-height: 150%;
  text-align: center;
  margin-top: 4%;
  margin-bottom: 4%;
  margin-left: 66.5%;
  width: 28%;
}

.dashboard-page-header-notification-dropdown-li-button:hover
{
  background-color:#E6E6E6;
  cursor: pointer;
}

.dashboard-page-header-notification-dropdown-li-button:active
{
  background-color: #F7F7F7;
}

